--- a/AbstractFactory/AbstractFactory/AbstractFactory.vcxproj
+++ b/AbstractFactory/AbstractFactory/AbstractFactory.vcxproj
@@ -152,6 +152,28 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AbstractFactory.cpp" />
+    <ClCompile Include="builder\MeshBuilder.cpp" />
+    <ClCompile Include="common\Cylinder.cpp" />
+    <ClCompile Include="common\CylinderProperty.cpp" />
+    <ClCompile Include="common\Sphere.cpp" />
+    <ClCompile Include="common\SphereProperty.cpp" />
+    <ClCompile Include="factory\CylinderMeshFactory.cpp" />
+    <ClCompile Include="factory\SphereMeshFactory.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="builder\MeshBuilder.h" />
+    <ClInclude Include="common\Cylinder.h" />
+    <ClInclude Include="common\CylinderProperty.h" />
+    <ClInclude Include="common\Mesh.h" />
+    <ClInclude Include="common\MeshProperty.h" />
+    <ClInclude Include="common\Sphere.h" />
+    <ClInclude Include="common\SphereProperty.h" />
+    <ClInclude Include="factory\CylinderMeshFactory.h" />
+    <ClInclude Include="factory\MeshFactory.h" />
+    <ClInclude Include="factory\SphereMeshFactory.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
