--- a/Prototype/Prototype/Prototype.vcxproj
+++ b/Prototype/Prototype/Prototype.vcxproj
@@ -151,7 +151,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="builder\MeshController.cpp" />
+    <ClCompile Include="common\CylinderMesh.cpp" />
+    <ClCompile Include="common\SphereMesh.cpp" />
     <ClCompile Include="Prototype.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="builder\MeshController.h" />
+    <ClInclude Include="common\CylinderMesh.h" />
+    <ClInclude Include="common\Mesh.h" />
+    <ClInclude Include="common\SphereMesh.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
