Added the class diagram

--- a/Prototype/Prototype/Prototype.vcxproj.filters
+++ b/Prototype/Prototype/Prototype.vcxproj.filters
@@ -54,4 +54,7 @@
       <Filter>Header Files\builder</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
