--- a/Builder/Builder/Builder.vcxproj
+++ b/Builder/Builder/Builder.vcxproj
@@ -164,6 +164,9 @@
     <ClInclude Include="common\Cylinder.h" />
     <ClInclude Include="controller\MeshBuildController.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
