--- a/Builder/Builder/Builder.vcxproj.filters
+++ b/Builder/Builder/Builder.vcxproj.filters
@@ -66,4 +66,7 @@
       <Filter>Header Files\controller</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
