--- a/Prototype/Prototype/Prototype.vcxproj
+++ b/Prototype/Prototype/Prototype.vcxproj
@@ -162,6 +162,9 @@
     <ClInclude Include="common\Mesh.h" />
     <ClInclude Include="common\SphereMesh.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
