--- a/DesignPatterns/DesignPatterns.vcxproj
+++ b/DesignPatterns/DesignPatterns.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{E9F220E5-EBC7-40D9-A239-B36376BB3CB2}</ProjectGuid>
+    <ProjectGuid>{D4EADAA9-B62D-4962-BC6F-A1D6C3DBDDAD}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>ClassAdapter</RootNamespace>
+    <RootNamespace>DesignPatterns</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -151,19 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ClassAdapter.cpp" />
-    <ClCompile Include="DataAcquisition.cpp" />
-    <ClCompile Include="ExternalService.cpp" />
-    <ClCompile Include="ExternalServiceDataAdapter.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Data.h" />
-    <ClInclude Include="DataAcquisition.h" />
-    <ClInclude Include="ExternalService.h" />
-    <ClInclude Include="ExternalServiceDataAdapter.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ClassDiagram.cd" />
+    <ClCompile Include="DesignPatterns.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
