--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,1 @@
-version: '1.0.{build}'
-
-image: Visual Studio 2017
-
-platform:
-  - x64
- 
-configuration:
-  - Release
-  - Debug
-
-install:
-    - git submodule update --init --recursive
-
-before_build:
-    - cmake -G "Visual Studio 15 2017 Win64" .
-
-build:
-  project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
+call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
