Added Bridge project to solution file

--- a/Bridge/Bridge/Bridge.vcxproj
+++ b/Bridge/Bridge/Bridge.vcxproj
@@ -165,6 +165,9 @@
     <ClInclude Include="ImplementationModule\MeshProperty.h" />
     <ClInclude Include="ImplementationModule\TextureProperty.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
