--- a/Bridge/Bridge/Bridge.vcxproj.filters
+++ b/Bridge/Bridge/Bridge.vcxproj.filters
@@ -63,4 +63,7 @@
       <Filter>Header Files\AbstractionModule</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
