--- a/Flyweight/Flyweight/Flyweight.vcxproj
+++ b/Flyweight/Flyweight/Flyweight.vcxproj
@@ -161,6 +161,9 @@
     <ClInclude Include="SphereModel.h" />
     <ClInclude Include="SphereTransform.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
