Added the class diagram for Iterator Design Pattern

--- a/Iterator/Iterator/Iterator.vcxproj
+++ b/Iterator/Iterator/Iterator.vcxproj
@@ -161,6 +161,9 @@
     <ClInclude Include="Iterators\Iterator.h" />
     <ClInclude Include="Iterators\MeshIterator.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
