--- a/Iterator/Iterator/Iterator.vcxproj.filters
+++ b/Iterator/Iterator/Iterator.vcxproj.filters
@@ -51,4 +51,7 @@
       <Filter>Header Files\Iterators</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
